docs/_static/mxnet.css
/* ... */
#plusMenu .dropdown-submenu>.dropdown-menu {
    left: 127px;
    top: 0;
    background: #fff;
}

#burgerMenu li, #plusMenu li {
    height: 30px;
    list-style-position: inside;
}

li.dropdown-submenu ul.dropdown-menu {
    min-width: 75px;
}

li.dropdown-submenu ul.dropdown-menu li {
    border-style: none !important;
}

li.dropdown-submenu ul.dropdown-menu a {
    padding-left: 20px !important;
}

@media screen and (max-width: 420px) {
    li.dropdown-submenu ul.dropdown-menu a {
        font-size: 12px !important;
    }
}

/*dropdown submenu*/
.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: -8px;
    left: 250px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
    background: transparent;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 10px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px
}

/*Plus icon*/
.plusIcon {
    display: none;
    position: absolute;
    top: 20px;
    right: 210px;
    width: 30px;
}

.glyphicon-plus {
    color: white;
}

@media screen and (max-width:600px) {
    div .plusIcon, .nav-bar {
        display: none !important;
    }

    div.burgerIcon {
        display: block;
        position: fixed;
        left: 45px;
    }

    #burgerMenu {
        position: fixed;
        left: 0;
        top: 49px;
        width: 100%;
        height: 100%;
        background: url(https://raw.githubusercontent.com/dmlc/web-data/master/mxnet/image/mxnet-background-compressed.jpeg);
        background-attachment: initial;
        background-size: cover;
    }

    #burgerMenu a {
        display: block;
        font-size: 19px;
        width: auto;
        padding-left: 75px;
        padding-top: 10px;
        color: #fff;
        text-decoration: none;
    }

    #burgerMenu a:hover {
        color: initial;
        background-color: inherit;
    }

    #burgerMenu li {
        border-bottom: 1px solid lightgray;
        height: 50px;
    }

    #logo-wrap {
        margin-left: 30px;
    }
}
/*--------------------------banner---------------------------*/
#splash{
    padding:60px 0 0 0;
    background-size:cover;
    background-attachment:fixed;
    color:#fff;
    text-align:center
}

#splash #banner {
    text-align: center
}

#banner-title span {
    font-family: AmazonEmber;
    font-weight: bold;
}

#banner-title {
    padding: 60px 0 10px 0;
    font-size: 40px;
    line-height: 55px;
    font-weight: 500;
    font-family: AmazonEmber;
    color: #fff;
    max-width: 600px;
    text-align: left;
    margin-left: 30px;
}

#landing-title {
    margin-right: 40px;
    font-size: 35px;
    color: #fff;
    font-family: AmazonEmber;
    font-weight: 300;
}

#intro {
    font-size: 16px;
    color: #fff;
    font-family: AmazonEmber;
    font-weight: 300;
}

@media screen and (max-width:768px) {
    #banner-title {
        font-size: 30px;
        padding: 60px 30px 10px 30px;
        margin-left: 0;
    }
}

#splash h1{
    font-size: 40px;
    margin-bottom: 20px;
}

#splash #social{
    margin:2em 0 4em 0;
}

#landing-btn-blk {
    margin-top: 2em;
}

#why_mxnet, #install_blk {
    margin:2em 0;
    display: inline;
}

#why_mxnet {
    padding-left: 20px;
}

@media screen and (max-width:400px) {
    #install_blk, #install_blk{
        display: block;
    }

    #install_blk {
        padding-left: 0;
        margin-top: 0;
    }
}

#why_mxnet_btn {
    border: 1.8px solid #FFFFFF;
    color: #FFFFFF;
    display: inline;
    font-size: 18px;
    font-family: AmazonEmber;
    padding: 8px 20px;
    -webkit-transition: .2s;
    transition: .2s;
}

#install_btn {
    border: 1.8px solid #FFFFFF;
    color: #fff;
    display: inline;
    font-size: 18px;
    font-family: AmazonEmber;
    padding: 8px 40px;
    -webkit-transition: .2s;
    transition: .2s;
}

#release_btn {
    width: auto;
    border: none;
}

#why_mxnet_btn:hover, #install_btn:hover {
    background-color: #FFFFFF;
    color: #0079b2;
    opacity: 0.9;
    text-decoration: none;
}

/*------------------------index page section----------------------------*/
.section-tout {
    padding:3em 0 1em;
}

.section-tout .container {
    height: 220px;
}

.section-tout .row {
    height: 100%;
}

.section-tout .row div {
    height: 110%;
    padding-left: 50px;
    background-color:#fff;
    box-shadow: 0px 2px 4px 0px rgba(0, 28, 36, 0.5);
}

.section-tout .row a {
    font-family: AmazonEmber;
    position: absolute;
    bottom: 20px;
    border: solid 1px;
    padding: 5px 10px;
    color: #111;
}

.section-tout h3{
    font-family: AmazonEmber;
    font-size:20px;
    color:  #007dbc;
    padding-top: 10px
}

.section-tout p {
    font-family: AmazonEmber;
    margin-bottom:2em;
}

@media (max-width: 1199px) {
    .section-tout .container {
        height: auto;
    }

    .section-tout .row a {
        position: inherit;
    }

    .section-tout .row div {
        padding-left: 45px;
    }

    .section-tout .row p {
        padding-bottom: 10px;
    }
}

@media (max-width: 767px) {
    .section-tout .row div {
        margin-bottom: -20px;
    }
}

.section-util {
    padding:3em 0 3em;
    text-align: left;
    margin-bottom: 50px;
}

.section-util .row > div {
    height: 320px;
    padding-left: 50px;
    padding-top: 40px;
}

.section-util .row div h2 {
    font-family: AmazonEmber;
    color: #fff;
}
/* ... */

